Feb 7  at 4.30 pm

--- a/main.tex
+++ b/main.tex
@@ -31,14 +31,15 @@
 \title{UHECR and the Galactic Halo Magnetic Field}
 
 \author[V.~Shaw et al.]{
-Vasundhara~Shaw,$^{1}$\thanks{E-mail: vasundhara.shaw@desy.de}
-Arjen~van~Vliet,$^{1}$
+Vasundhara~Shaw,$^{1,3}$\thanks{E-mail: vasundhara.shaw@desy.de}
+Arjen~van~Vliet,$^{1,2}$
 Andrew~M.~Taylor$^{1}$
 \\
 % List of institutions
-$^{1}$Deutsches Elektronen-Synchrotron, Platanenallee 6, Zeuthen, Germany
+$^{1}$Deutsches Elektronen-Synchrotron, Platanenallee 6, Zeuthen, Germany \\ %\newline
+$^{2}$Department of Physics, Khalifa University, P.O. Box 127788, Abu Dhabi, United Arab Emirates \\
+$^{3}$University of Potsdam, Institute of Physics and Astronomy, 14476 Potsdam, Germany
 }
-
 % These dates will be filled out by the publisher
 \date{Accepted XXX. Received YYY; in original form ZZZ}
 
@@ -71,7 +72,7 @@ The origin and structure of the Galactic magnetic field remains a long standing 
 A variety of methods allow observational probes of Galactic magnetic fields, such as starlight polarisation and infrared emission from dust grains, or Zeeman splitting of spectral radio lines in the dust clouds \cite{Beck_2007}. Galactic magnetic fields are also probed by Pulsar dispersion with Faraday rotation, which is sensitive to the magnetic-field component parallel to the line of sight $B_{\parallel}$, and synchrotron radiation which probes the component perpendicular to the line of sight $B_{\perp}$. A major drawback in using the Pulsar dispersion measure along with the Faraday rotation measure method for probing Galactic magnetic fields is that it relies heavily on the lines of sight along which Pulsars are found, which places a strong focus on the regions close to the Galactic plane. Therefore, this method is of most use for probing the magnetic field in the Galactic disc region, and is not so useful for probing the magnetic field out in the Galactic halo. Synchrotron radiation on the other hand is produced via the gyration of non-thermal electrons along magnetic field lines. This method can thus be used to probe magnetic fields also in the Galactic halo.
 
 % Observations from Fermi 
-The observations from FERMI-LAT \cite{Su_2010} in the gamma ray regime unveiled giant bipolar gamma ray bubbles extending up to $\approx$~3~kpc radially and $\approx$~8~kpc in the z-direction, having a total energy of $\approx 10^{(54-55)}$~ergs. Recently, observations from eROSITA \cite{eROSITA} in X-ray regime further suggest the existence of even larger bubbles going up to  $\approx$~7~kpc radially and $\approx$~14~kpc in the azimuthal direction, having an estimated total thermal energy of $\approx 10^{56}$~ergs. These observations strongly motivate the requirement of a magnetic field model focusing on the halo. Henceforth, for the sake of simplicity we will address the two bubbles together as the Galactic halo bubbles.
+The observations from FERMI-LAT (\cite{Dobler_2010}, \cite{Su_2010} \& \cite{Su_2012}) in the gamma ray regime unveiled giant bipolar gamma ray bubbles extending up to $\approx$~3~kpc radially and $\approx$~8~kpc in the z-direction, having a total energy of $\approx 10^{(54-55)}$~ergs. Recently, observations from eROSITA \cite{eROSITA} in X-ray regime further suggest the existence of even larger bubbles going up to  $\approx$~7~kpc radially and $\approx$~14~kpc in the azimuthal direction, having an estimated total thermal energy of $\approx 10^{56}$~ergs. These observations strongly motivate the requirement of a magnetic field model focusing on the halo. Henceforth, for the sake of simplicity we will address the two bubbles together as the Galactic halo bubbles.
 
 % Observations from S-PASS and Planck
 With the help of the aforementioned techniques, we can estimate the strength and direction of the magnetic field in different parts of the Galaxy. 
@@ -84,15 +85,15 @@ Currently there are a few ways to model the spatial distribution of these relati
 
 % Other magnetic field models and energies in the halo.
 
-Several efforts have  been made to model the magnetic fields in the Galaxy namely by \cite{Jaffe_2010}, \cite{Jaffe_2011}, \cite{Sun_2008}, and \cite{JF12}. It should be noted that our understanding of the magnetic field in the disc region of the Galaxy is much better than that of the halo region due to the larger amount of observational data present at varying frequencies. However, widely used models like JF12 \cite{JF12} have also made some efforts towards the modelling of the Galactic halo magnetic field. One drawback of JF12 \cite{JF12} is that it masks out the Fermi bubble regions in its models, but S-PASS \cite{Carretti_2013} observations tell us that magnetic field strength in this region is not negligible. Therefore, it is important to consider modelling the Galactic halo including the Fermi bubbles.
+Several efforts have been made to model the magnetic fields in the Galaxy, for example by \cite{Jaffe_2010}, \cite{Jaffe_2011}, \cite{Sun_2008}, and \cite{JF12}. It should be noted that our understanding of the magnetic field in the disc region of the Galaxy is much better than that of the halo region due to the larger amount of observational data present at varying frequencies. However, widely used models like JF12 (\cite{JF12}) have also made some efforts towards the modelling of the Galactic halo magnetic field. One drawback of JF12 is that it masks out the Fermi bubble regions in its models, but S-PASS \cite{Carretti_2013} observations tell us that magnetic field strength in this region is not negligible. Therefore, it is important to consider modelling the Galactic halo including the Fermi bubbles.
 
 % \Vasu{makee first  sentence}  \Arjen{Perhaps this paragraph can be extended a bit. Why do we care about the non-thermal electron distribution when talking about the Galactic magnetic field? Why is our knowledge of the non-thermal electron distribution so poor? How can it be measured and how do the models that you mention relate to the measurements?} \Vasu{Currently working on it.}
 %However, when modelling Galactic magnetic fields, Galactic cosmic ray electrons are not the only particles of interest. 
 
 % Importance of UHECRs
-The propagation of cosmic rays is vital to understand their sources, and this in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$) are also known as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can therefore be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{JF12},\cite{FARRAR_2014}, \cite{PT11_2011}, \cite{Sun_2008}, \cite{Sun_2010}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{ICRC_2021} \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, knowledge of Galactic magnetic fields is extremely important. 
-
-%TA hotspot reference: R. U. Abbasi et al. [Telescope Array collab.], ApJL 790 (2014) L21.
+The propagation of cosmic rays is vital to understand their sources, and this in turn is limited by our understanding of the intervening magnetic fields. Extragalactic cosmic rays (ultra-high-energy cosmic rays (UHECRs) with energies higher than ~$10^{18}$~eV) are constituted by charged protons or nuclei, and their original directions are, therefore, scrambled by the magnetic fields in the path between the source and Earth. The paths of these UHECRs can therefore be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{JF12}, \cite{FARRAR_2014}, \cite{PT11_2011}, \cite{Sun_2008}, \cite{Sun_2010}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{TA_2014} \cite{ICRC_2021} \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, knowledge of Galactic magnetic fields is extremely important. 
+% I'm still missing this reference:
+%
 
 
 % Introduction to brief layout of the paper
@@ -178,7 +179,7 @@ and,
 %\end{strip}
 %\hline
 
-where the functions,
+where ,
 \begin{align}
 t = \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
 \\
@@ -293,108 +294,55 @@ Charged particles propagating through magnetic fields, precess around the field 
 \begin{eqnarray}
 \frac{{\rm d}\bfm{\beta}}{c{\rm d}t} = \frac{1}{r_{L}}\bfm{\beta}\times \bfm{\hat{B}}, 
 \end{eqnarray}
-where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extragalactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Blasi} \Andrew{wrong reference- Blasi }, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy, magnetic fields are of the order of a few $\mu$G. In case of a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$, this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
+where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extragalactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Blasi_1999}, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs with rigidity R = $E/Z > 10^{19}$ EeV (here Z is the atomic number) subsequently have $r_{L}>{\rm 10~Mpc}$ and are therefore not sensitive to the extragalactic magnetic field over 10~Mpc propagation distance scales. \Arjen{The charge of the CRs is quite important here, but is not mentioned, while it's dangerous to make this statement for any CR with $E > 10^{19}$ EeV. Perhaps this should be changed to rigidity larger than $10^{19}$ EeV? But you would need to define rigidity first than of course.}
+However, once they enter the Galaxy, magnetic fields are of the order of a few $\mu$G. In case of a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$, this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
 
-We use the publicly available cosmic ray propagation code CRPropa3 \cite{CRPropa3_2016} for studying the effects of toy model magnetic fields on the arrival directions of cosmic rays. Within this software we use the Boris pusher scheme in order to ensure a particle's trajectory evolution satisfies the Lorentz force equation. It is important to note that CRPropa conserves the total energy of each particle during the propagation.
+We use the publicly available cosmic ray propagation code CRPropa~3~\cite{CRPropa3_2016} for studying the effects of toy model magnetic fields on the arrival directions of cosmic rays. Within this software we use the Boris pusher scheme in order to ensure a particle's trajectory evolution satisfies the Lorentz force equation. It is important to note that CRPropa conserves the total energy of each particle during the propagation.
 %% Setup description
-We propagate $10^7$ cosmic rays starting at earth isotropically through the toy model using the backtracking scheme up to a distance of 20~kpc from the Galactic center. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
+We propagate $10^7$ cosmic rays starting at Earth isotropically through the toy model using the backtracking scheme up to a distance of 20~kpc from the Galactic center. We use nitrogen as a choice of our cosmic ray particles at 40~EeV with R $= 40/7$~EeV energy. 
 
-\subsection{The Effect of Magnetic Field Model on UHECR Arrival}
+\subsection{Effect of Magnetic Field Model on UHECR Arrival}
 
 In figure~\ref{fig:AD_Plots} we show:
 
 \begin{enumerate}
-    \item The magnification maps in log (particles/str) of the backtracked positions for the cosmic rays (\textbf{left}). These magnification maps are made for the best-fit values (\textbf{top}), the lower bound or minimum values (\textbf{middle}) and the upper bound or maximum (\textbf{bottom}) values of the parameters.
+    \item The magnification maps in log (particles/str) of the backtracked positions for the cosmic rays (\textbf{left}). These magnification maps are made for the best-fit values (\textbf{top}), the lower bound or minimum values (\textbf{middle}) and the upper bound or maximum values (\textbf{bottom}) of the parameters.
     To create these histograms we used 180 bins for both latitudes and longitudes. 
-    We normalise these maps made with the toy model fields by dividing them with maps made without any magnetic fields. In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones where the cosmic rays are abundant. The UHECR deflections are sensitive to both structured and turbulent fields and therefore the maximum case has a larger region of suppression in comparison to best-fit and minimum cases (see table \ref{Para_table}). This suppression and enhancement of UHECRs is also shown for two potential UHECR sources CenA (lat = $\rm 19.42^{\circ}$, lon = $\rm 50.49^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$). Because of their positioning in the sky both the sources lie in the suppression region in the maximum case.
-    \item Skymap for arrival directions
-    of cosmic rays from UHECRs sources CenA and NGC 253 on the (\textbf{right}). Similar to the above case of the magnification maps we backtrack cosmic rays starting from earth till 20~kpc. In a region of $5^{\circ}$ from the source we plot the arrival directions of cosmic rays. Like the magnification maps we normalise these maps with no magnetic field maps.  This gives us a normalised value of the number of hits obtained. Analogous to magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the best-fit, minimum and maximum cases. We also estimate the mean value of the $5^{\circ}$ spread and the mean direction denoted by a \tikzcircle[black,fill = black]{2pt}. 
+    We normalise these maps made with the toy model fields by dividing them with maps made without any magnetic fields. In each map the blue regions denote the areas of the sky where cosmic rays are suppressed and the red regions are the ones where the cosmic rays are enhanced.
+    
+    %\Arjen{Perhaps rather 'boosted' or 'enhanced' instead of abundant?}. 
+    
+    The UHECR deflections are sensitive to both structured and turbulent fields and therefore the maximum case has a larger region of suppression in comparison to best-fit and minimum cases (see table \ref{Para_table}). This suppression and enhancement of UHECRs is also shown for two potential UHECR sources CenA (lat = $\rm 19.42^{\circ}$, lon = $\rm 50.49^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$). Because of their positioning in the sky both the sources lie in the suppression region in the maximum case.
+    \item Skymaps for arrival directions
+    of cosmic rays from UHECRs sources CenA and NGC 253 on the (\textbf{right}). Similar to the above case of the magnification maps we backtrack cosmic rays starting from Earth till 20~kpc distance from the Galactic centre. We plot the arrival directions of cosmic rays that came from a region of $5^{\circ}$ from the source.  Like the magnification maps, we normalise these maps with no magnetic field maps.  This gives us a normalised value of the number of hits obtained. Analogous to magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the best-fit, minimum and maximum cases. We also estimate the mean value of the $5^{\circ}$ spread and the mean direction denoted by a \tikzcircle[black,fill = black]{2pt}. 
     The standard deviation for each source in each case is as follows:
-    \begin{enumerate}
-        \item Best fit $\sigma^2_{\rm NGC 253} = $ 0.13~str ($\sigma_{\rm NGC 253} = 20.65^{\circ}$ ), $\sigma^2_{\rm Cen A} =$ 0.12~str, {($\sigma_{\rm Cen~~}=20^{\circ}$)}
-        \item Maximum $\sigma^2_{\rm NGC 253} = $0.46~str ($\sigma_{\rm NGC 253} = 26.4^{\circ}$), $\sigma^2_{\rm
-        Cen A} = $0.37~str , {($\sigma_{\rm Cen~~}=35^{\circ}$)}
-        \item Minimum $\sigma^2_{\rm NGC 253} = $~0.061~str ($\sigma_{\rm NGC 253} = 3.5^{\circ}$), $\sigma^2_{\rm Cen A} = $~0.066~str {($\sigma_{\rm Cen~~}=14^{\circ}$)}
-        \newline
-        \Andrew{perhaps better to quote $\sigma_{a}= b^{\circ}$}
-    \end{enumerate}
+     \begin{enumerate}
+        \item Best fit $\sigma_{\rm NGC 253} = 21^{\circ}$ , {$\sigma_{\rm Cen A} = 20^{\circ}$}
+        \item Minimum $\sigma_{\rm NGC 253} = 14^{\circ}$ , $\sigma_{\rm Cen A} = 14^{\circ}$
+        \item Maximum $\sigma_{\rm NGC 253} = 39^{\circ}$, $\sigma_{\rm Cen A} = 35^{\circ}$
 
-    It can be seen that in the maximum case it is harder to associate the cosmic rays to a source in comparison to best-fit or minimum case. This is due the fact that though structured fields dictate the direction of the deflection the turbulent fields spread out the directions. This is why when the turbulent fields are stronger the arriving directions are spread out entirely over the sky.
+    \end{enumerate}
+    % \begin{enumerate}
+    %     \item Best fit $\sigma^2_{\rm NGC 253} = $ 0.13~str ($\sigma_{\rm NGC 253} = 20.65^{\circ}$ ), $\sigma^2_{\rm Cen A} =$ 0.12~str, {($\sigma_{\rm Cen~~}=20^{\circ}$)}
+    %     \item Maximum $\sigma^2_{\rm NGC 253} = $0.46~str ($\sigma_{\rm NGC 253} = 26.4^{\circ}$), $\sigma^2_{\rm
+    %     Cen A} = $0.37~str , {($\sigma_{\rm Cen~~}=35^{\circ}$)}
+    %     \item Minimum $\sigma^2_{\rm NGC 253} = $~0.061~str ($\sigma_{\rm NGC 253} = 3.5^{\circ}$), $\sigma^2_{\rm Cen A} = $~0.066~str {($\sigma_{\rm Cen~~}=14^{\circ}$)}
+    %     \newline
+    %     \Andrew{perhaps better to quote $\sigma_{a}= b^{\circ}$} \Arjen{I would probably only show the $\sigma_{a}= b^{\circ}$ cases, not the 'str' cases. And the labels of $\sigma_{a}$ are not always correct.}
+    % \end{enumerate}
+
+    It can be seen that in the maximum case it is harder to associate the cosmic rays to a source in comparison to the best-fit or minimum case. This is due to the fact that though structured fields are responsible for the direction of deflection, turbulent fields spread out the deflections over the entire sky.
+   
+    % \Vasu{Have addressed your comment!}
+    % This is due to the fact that though structured fields dictate the direction of the deflection the turbulent fields spread out the directions. This is why when the turbulent fields are stronger the arriving directions are spread out entirely over the sky. \Arjen{These last two sentences can be improved. Perhaps something more simple like 'This is because the stronger structured and turbulent fields spread out the deflections over the entire sky.'?}
     \end{enumerate}
     
-From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it is evident that the best fit and lower extreme (minimum) parameters can clearly help in associating the deflected particles with their potential source. However, in the upper extreme (maximum) parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. Cosmic rays from  sources like NGC253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$. In case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source.
+From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it is evident that the best fit and lower extreme (minimum) parameters can clearly help in associating the deflected particles with their potential source. However, in the upper extreme (maximum) parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. 
 
- %In table~{\ref{AD_table}} we show the 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Lower Bound
 
-%%% NGC253 mean lat = -60.90231798341981 and lon = -9.43559404135401 degrees
-%%% NGC253 standard deviation lat = 15.69753500376699 and lon = 84.34462835618804 degrres
-%%% NGC253 variance lat = 0.07506157199726642 and lon = 2.167053299539898
+It can be seen that for the 'Maximum' case in fig~\ref{fig:AD_Plots}, cosmic rays from sources like NGC 253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$ as seen also in the bottom-right figure~\ref{fig:AD_Plots}. Likewise, in the case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source.
 
-%%% CenA mean lat = 14.137807893047896 and lon = 39.59795385602137 degrees
-%%% CenA standard deviation lat = 22.427737611940568 and lon = 26.033548777265693 degrees
-%%% CenA variance lat = 0.15322360223540268 and lon = 0.20645313481127128
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Upper Bound
-
-%%% NGC253 mean lat = -2.322388780731066 and lon = -8.664927316867324 degrees
-%%% NGC253 standard deviation lat = 39.046039934810125 and lon = 98.20089826558244 degrees
-%%% NGC253 variance lat = 0.46441765734531754 and lon = 2.937552627840132
-
-%%% CenA mean lat = 0.33584693428469714 and lon = 32.07788442314936 degrees
-%%% CenA standard deviation lat = 38.066520277742804 and lon = 83.47296062758137 degrees
-%%% CenA variance lat = 0.44140890797613463 and lon = 2.1224935049576783
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Best Fit
-
-%%% NGC253 mean lat = -48.890861373380375 and lon = -1.3601224872785176 degrees
-%%% NGC253 standard deviation lat = 22.865215337703397 and lon = 83.981593692422 degrees
-%%% NGC253 variance lat = 0.15925949224439517 and lon = 2.1484386610540773
-
-%%% CenA mean lat = 8.648647356708622 and lon = 45.80995936362569 degrees
-%%% CenA standard deviation lat = 28.67183426567853 and lon = 35.674397052936385 degrees
-%%% CenA variance lat = 0.2504180851714255 and lon = 0.3876751990217161
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\begin{center}
-\iffalse
-\begin{table*}
-\centering
-\caption{CAPTION TEXT GOES HERE- \Andrew{NOT REALLY SURE THIS TABLE IS NEEDED}}
-\begin{tabular}{|p{3.cm}|p{4.cm}|p{4.cm}|p{4.cm}|}
-    \hline
-    Parameter set & Mean (${}^\circ$)& SD (${}^\circ$) & Variance ($str$)\\
-    \hline
-    \multicolumn{4}{|c|}{Cen A} \\ 
-    \hline
-    \rule{0pt}{3ex} 
-    Best Fit & $\overline{b} = 8.64$, $\overline{l} = 45.80 $& $\sigma_{b} = 28.67 $, $\sigma_{l} = 35.67$ & $\sigma^2_{b} = 0.25 $, $\sigma^2_{l} = 0.38$ \\
-    \hline
-    \rule{0pt}{3ex} 
-     Lower & $\overline{b} = 14.13$  , $\overline{l} = 39.59$ & $\sigma_{b} = 22.42$, $\sigma_{l} = 26.03$ & $\sigma^2_{b} = 0.15 $, $\sigma^2_{l} = 0.20$\\
-    \hline
-    \rule{0pt}{3ex} 
-     Upper & $\overline{b} = 0.33$, $\overline{l} = 32.07$ & $\sigma_{b} = 38.06$ , $\sigma_{l} = 83.47$ & $\sigma^2_{b} = 0.44 $, $\sigma^2_{l} = 2.12$\\
-    \hline
-  \multicolumn{4}{|c|}{NGC 253} \\ 
-    \rule{0pt}{3ex} 
-    Best Fit & $\overline{b} = -48.89$, $\overline{l} = -1.36$  & $\sigma_{b} = 22.86$ , $\sigma_{l} = 83.98$ & $\sigma^2_{b} = 0.15 $, $\sigma^2_{l} = 2.14$ \\
-    \hline
-    \rule{0pt}{3ex} 
-     Lower & $\overline{b} = -60.90 $, $\overline{l} = -9.43$ & $\sigma_{b} = 15.69$, $\sigma_{l} = 84.34 $ & $\sigma^2_{b} = 0.07 $, $\sigma^2_{l} = 2.16$\\
-    \hline
-    \rule{0pt}{3ex} 
-     Upper & $\overline{b} = -2.32$, $\overline{l} = -8.66$ & $\sigma_{b} = 39.04$ , $\sigma_{l} = 98.20 $& $\sigma^2_{b} = 0.44 $, $\sigma^2_{l} = 2.93$\\
-    \hline
-\end{tabular}
-\label{AD_table}
-\end{table*}
-\fi
-%\end{center}
-%\newpage
+\Arjen{I think it would be good to mention the suppression of NGC~253 clearly in a separate sentence, stating specifically that this is why there are hardly any cosmic rays coming from this source in the bottom right plot.}
 
 \begin{figure*}
 \centering
@@ -418,24 +366,17 @@ From both the magnification and arrival direction maps in \ref{fig:AD_Plots}. it
 % \end{frame}
 \section{Conclusions}
 \label{Conclusions}
-One primary conclusion of our study is to highlight the importance of the presence of magnetic fields and non-thermal electrons at high latitudes in order to explain the radio observations. It is important to note that for equipartition of energy \cite{Drury_2012} to be valid if magnetic fields dominate then electron density has to be lower.
+%Our study highlights the importance that Galactic halo magnetic fields and non-thermal electrons can play in explaining the wide-field radio observations of these regions. It is important to note that for equipartition of energy \cite{Drury_2012} to be valid if magnetic fields dominate then electron density has to be lower.
 %By definition of equipartition of energy the ratio between thermal pressure and magnetic pressure also known as plasma $\beta$ condition the magnetic the total energy in magnetic fields should be comparable to thermal particles \cite{Drury_2012}.
-Our toy model motivates magnetic field with a total energy content of $\approx 10^{55}$~ergs and the total energy in cosmic ray protons at 1 GeV $\approx 4\times 10^{55}$~ergs. These values are comparable with observations made by \cite{Su_2010} and \cite{eROSITA}. In comparison the total energy values in the halo fields of the JF12 model $4\times 10^{54}$~ergs and $3\times  10^{54}$~ergs for the torroidal halo and X-field respectively \cite{Taylor_2019}.
+Utilising a toy model for the halo Galactic magnetic field, and making comparisons of the synchrotron emission predicted by it to the Planck 30~GHz data, we explore the region of model parameters that provides a good description of the data. Significant evidence is found for the presence of an extended field component out in the Galactic halo region. Our results are compatible with the Galactic halo magnetic field extending to 7~kpc in height above the Galactic disk. The total magnetic field content in the halo region from our model fits is $\approx 10^{55}$~ergs (with a comparable total energy in cosmic ray protons at 1 GeV, $\approx 4\times 10^{55}$~ergs). We note that these values are comparable with observational inference made in \cite{eROSITA}, which indicated the presence of some $10^{56}$~erg of thermal particles in Galactic halo. In comparison to these energy contents, the total magnetic field energy content in the halo field component of the JF12 model is $4\times 10^{54}$~ergs and $3\times  10^{54}$~ergs for the torroidal halo and X-field respectively \cite{Taylor_2019}.
 
-Another important conclusion of this study is the effect of propagation of uncertainities in the arrival directions of UHECRs. The large uncertainties on the magnetic fields can make source localisation for UHECRs impossible.
-Therefore, the halo region of the magnetic field cannot be ignored while modelling Galactic magnetic fields. 
+Using the maximum and minimum constraints on magnetic field model parameter values, the range of deflection that UHECR experience in passing through such Galactic halo magnetic field structure was subsequently investigated. A significant range in prediction of both: a) the magnification of different regions of the extragalactic sky; b) the deflection of CR arriving from different local extragalactic sources was found.
 
-\Vasu{Incomplete still, we need more to be added.}
-Observations from LOFAR and SKA will provide useful insight at different radio frequencies and thus can be helpful to model the Galactic magnetic fields.
+\Arjen{I would be a bit more specific here. Perhaps mention the minimal and maximal spread and/or magnification.}
 
-\begin{enumerate}
+One of the limitations in our model is that we assume that the magnetic field and electron density have an exponential cut-off, where as in reality they would have a power-law shape \cite{Drury_2012} \cite{Hammurabi} \cite{Eck_2015}. This implies that we could be underestimating the parameter values we obtain. The second limitation of our model is the coherence lengths of the magnetic fields, we use $L_{\rm coh} \approx 150$~kpc which might be too large for the real world scenario. However, our aim is to study the large scale magnetic fields and use polarised synchrotron emission to probe them. Therefore, fields of small coherence lengths ($L_{\rm coh} < 100 - 150 $~pc) will not have a strong effect on the polarised intensity
 
- 
-    \item Variance for the different maps:
-    
-    \item High uncertainities in parameters means we need better probes to constrain the models. LOFAR and SKA radio band but different frequencies might be helpful
-   
-\end{enumerate}
+\Arjen{If you mention these limitations, you should also discuss why it's not that bad, or not that important anyway. Or why they are justified. Stating it like this makes it sound like nobody should care about your results as they might not be correct due to these limitations anyway.}
 
 %\clearpage
 %\section{References}
