--- a/references.bib
+++ b/references.bib
@@ -247,6 +247,97 @@ url = {https://www.sciencedirect.com/science/article/pii/S0273117701001089},
 author = {M. Boezio and G. Barbiellini and V. Bonvicini and P. Schiavon and A. Vacchi and N. Zampa and D. Bergström and P. Carlson and T. Francke and S. Grinstein and N. Weber and M. Suffert and M. Hof and J. Kremer and W. Menn and M. Simon and S.A. Stephens and M. Ambriola and R. Bellotti and F.S. Cafagna and F. Ciacio and M. Circella and C. {De Marzo} and N. Finetti and P. Papini and S. Piccardi and P. Spillantini and S. Bartalucci and M. Ricci and C. Grimani and M. Casolino and M.P. {De Pascale} and A. Morselli and P. Picozza and R. Sparvoli and J.W. Mitchell and J.F. Ormes and R.E. Streitmatter and U. Bravar and S.J. Stochaj},
 abstract = {Two recent ballon-borne experiments have been performed by the WiZard/CAPRICE collaboration in order to study the electron and positron components in the cosmic radiation. On 1994 August 8–9 the CAPRICE94 experiment flew from norther Canada and on 1998 May 28–29 the CAPRICE98 experiment flew from New Mexico, USA at altitudes corresponding to 3.9 and 5.5 g/cm2 of average residual atmosphere respectively. The apparatus were equipped with a Ring Imaging Cherenkov (RICH) detector, a time-of-flight system, a superconducting magnet spectrometer with a tracking system and a 7-radiation-length silicon-tungsten imaging calorimeter. The RICH used in 1994 had a solid NaF radiator while in 1998 the RICH had a C4F10 gaseous radiator. We report on the electron and positron spectra and positron fraction at the top of the atmosphere from few hundred MeV to 40 GeV measured by these two experiments.}
 }
+
+%% Su 2012
+
+@ARTICLE{Su_2012,
+       author = {{Su}, Meng and {Finkbeiner}, Douglas P.},
+        title = "{Evidence for Gamma-Ray Jets in the Milky Way}",
+      journal = {\apj},
+     keywords = {galaxies: active, galaxies: starburst, gamma rays: galaxies, ISM: jets and outflows, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
+         year = 2012,
+        month = jul,
+       volume = {753},
+       number = {1},
+          eid = {61},
+        pages = {61},
+          doi = {10.1088/0004-637X/753/1/61},
+archivePrefix = {arXiv},
+       eprint = {1205.5852},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...753...61S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+%% Dobler 2010
+@ARTICLE{Dobler_2010,
+       author = {{Dobler}, Gregory and {Finkbeiner}, Douglas P. and {Cholis}, Ilias and {Slatyer}, Tracy and {Weiner}, Neal},
+        title = "{The Fermi Haze: A Gamma-ray Counterpart to the Microwave Haze}",
+      journal = {\apj},
+     keywords = {gamma rays: general, gamma rays: ISM, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2010,
+        month = {7},
+       volume = {717},
+       number = {2},
+        pages = {825-842},
+          doi = {10.1088/0004-637X/717/2/825},
+archivePrefix = {arXiv},
+       eprint = {0910.4583},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...717..825D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+%% TA Hotspot 
+@article{TA_2014,
+   title={INDICATIONS OF INTERMEDIATE-SCALE ANISOTROPY OF COSMIC RAYS WITH ENERGY GREATER THAN 57 EeV IN THE NORTHERN SKY MEASURED WITH THE SURFACE DETECTOR OF THE TELESCOPE ARRAY EXPERIMENT},
+   volume={790},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.1088/2041-8205/790/2/L21},
+   DOI={10.1088/2041-8205/790/2/l21},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Abbasi, R. U. and Abe, M. and Abu-Zayyad, T. and Allen, M. and Anderson, R. and Azuma, R. and Barcikowski, E. and Belz, J. W. and Bergman, D. R. and Blake, S. A. and Cady, R. and Chae, M. J. and Cheon, B. G. and et al.},
+   year={2014},
+   month={Jul},
+   pages={L21} }
+
+%% Blasi 
+@ARTICLE{Blasi_1999,
+       author = {{Blasi}, Pasquale and {Burles}, Scott and {Olinto}, Angela V.},
+        title = "{Cosmological Magnetic Field Limits in an Inhomogeneous Universe}",
+      journal = {\apjl},
+     keywords = {COSMOLOGY: OBSERVATIONS, GALAXIES: INTERGALACTIC MEDIUM, MAGNETIC FIELDS, GALAXIES: QUASARS: ABSORPTION LINES, Cosmology: Observations, Galaxies: Intergalactic Medium, Magnetic Fields, Galaxies: Quasars: Absorption Lines, Astrophysics},
+         year = 1999,
+        month = {4},
+       volume = {514},
+       number = {2},
+        pages = {L79-L82},
+          doi = {10.1086/311958},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9812487},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999ApJ...514L..79B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+%% Eck 2015
+@article{Eck_2015,
+   title={MAGNETIC FIELDS IN A SAMPLE OF NEARBY SPIRAL GALAXIES},
+   volume={799},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/799/1/35},
+   DOI={10.1088/0004-637x/799/1/35},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Van Eck, C. L. and Brown, J. C. and Shukurov, A. and Fletcher, A.},
+   year={2015},
+   month={1},
+   pages={35} }
+v
 %% PT 11
 
 @article{PT11_2011,
