Final_version_1 Feb 9, 4 pm

--- a/references.bib
+++ b/references.bib
@@ -458,7 +458,7 @@ v
    publisher={Oxford University Press (OUP)},
    author={van Vliet, Arjen and Palladino, Andrea and Taylor, Andrew and Winter, Walter},
    year={2021},
-   month={Dec},
+   month={12},
    pages={1289–1297}
 }
 %% Taylor 2019
