--- a/references.bib
+++ b/references.bib
@@ -515,6 +515,64 @@ NOTE    = {revision \#193987}
     url = {https://doi.org/10.1111/j.1365-2966.2011.19114.x},
     eprint = {https://academic.oup.com/mnras/article-pdf/416/2/1152/18590169/mnras0416-1152.pdf},
 }
+%% Gwnell 
+@article{Giacinti_2018,
+   title={Reconciling cosmic ray diffusion with Galactic magnetic field models},
+   volume={2018},
+   ISSN={1475-7516},
+   url={http://dx.doi.org/10.1088/1475-7516/2018/07/051},
+   DOI={10.1088/1475-7516/2018/07/051},
+   number={07},
+   journal={Journal of Cosmology and Astroparticle Physics},
+   publisher={IOP Publishing},
+   author={Giacinti, G. and Kachelrieẞ, M. and Semikoz, D.V.},
+   year={2018},
+   month={Jul},
+   pages={051–051} }
+%% Haverkorn
+@article{Haverkorn_2013,
+   title={Studying Galactic interstellar turbulence through fluctuations in synchrotron emission},
+   volume={558},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201322013},
+   DOI={10.1051/0004-6361/201322013},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Iacobelli, M. and Haverkorn, M. and Orrú, E. and Pizzo, R. F. and Anderson, J. and Beck, R. and Bell, M. R. and Bonafede, A. and Chyzy, K. and Dettmar, R.-J. and Enßlin, T. A. and Heald, G. and Horellou, C. and et al.},
+   year={2013},
+   month={Oct},
+   pages={A72} }
+
+%% Ohno_1993
+@article{Ohno_1993,
+  title={The random magnetic field in the Galaxy},
+  author={Ohno, Hiroshi and Shibata, Shinpei},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={262},
+  number={4},
+  pages={953--962},
+  year={1993},
+  publisher={Oxford University Press Oxford, UK}
+}
+  
+@ARTICLE{Chepurnov_2010,
+       author = {{Chepurnov}, A. and {Lazarian}, A. and {Stanimirovi{\'c}}, S. and {Heiles}, Carl and {Peek}, J.~E.~G.},
+        title = "{Velocity Spectrum for H I at High Latitudes}",
+      journal = {\apj},
+     keywords = {ISM: lines and bands, methods: data analysis, techniques: spectroscopic, turbulence, Astrophysics},
+         year = 2010,
+        month = may,
+       volume = {714},
+       number = {2},
+        pages = {1398-1406},
+          doi = {10.1088/0004-637X/714/2/1398},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0611462},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...714.1398C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 %% JF12 2012ApJ...757...14J
 %%        %  journal = {\apj}
@@ -785,6 +843,44 @@ archivePrefix = {arXiv},
     doi = {10.1093/mnras/staa3068},
     url = {https://doi.org/10.1093/mnras/staa3068},
     eprint = {https://academic.oup.com/mnras/article-pdf/499/3/3673/34055558/staa3068.pdf},
+}
+%% Planck_XXV
+@ARTICLE{Planck_XXV,
+       author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and {Alves}, M.~I.~R. and {Arnaud}, M. and {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and {Banday}, A.~J. and {Barreiro}, R.~B. and {Bartlett}, J.~G. and {Bartolo}, N. and {Battaner}, E. and {Benabed}, K. and {Beno{\^\i}t}, A. and {Benoit-L{\'e}vy}, A. and {Bernard}, J. -P. and {Bersanelli}, M. and {Bielewicz}, P. and {Bock}, J.~J. and {Bonaldi}, A. and {Bonavera}, L. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and {Boulanger}, F. and {Bucher}, M. and {Burigana}, C. and {Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and {Catalano}, A. and {Challinor}, A. and {Chamballu}, A. and {Chary}, R. -R. and {Chiang}, H.~C. and {Christensen}, P.~R. and {Colombi}, S. and {Colombo}, L.~P.~L. and {Combet}, C. and {Couchot}, F. and {Coulais}, A. and {Crill}, B.~P. and {Curto}, A. and {Cuttaia}, F. and {Danese}, L. and {Davies}, R.~D. and {Davis}, R.~J. and {de Bernardis}, P. and {de Rosa}, A. and {de Zotti}, G. and {Delabrouille}, J. and {Delouis}, J. -M. and {D{\'e}sert}, F. -X. and {Dickinson}, C. and {Diego}, J.~M. and {Dole}, H. and {Donzelli}, S. and {Dor{\'e}}, O. and {Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and {Eriksen}, H.~K. and {Falgarone}, E. and {Fergusson}, J. and {Finelli}, F. and {Forni}, O. and {Frailis}, M. and {Fraisse}, A.~A. and {Franceschi}, E. and {Frejsel}, A. and {Galeotta}, S. and {Galli}, S. and {Ganga}, K. and {Ghosh}, T. and {Giard}, M. and {Giraud-H{\'e}raud}, Y. and {Gjerl{\o}w}, E. and {Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and {Gratton}, S. and {Gregorio}, A. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and {Hansen}, F.~K. and {Hanson}, D. and {Harrison}, D.~L. and {Helou}, G. and {Henrot-Versill{\'e}}, S. and {Hern{\'a}ndez-Monteagudo}, C. and {Herranz}, D. and {Hildebrandt}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and {Hornstrup}, A. and {Hovest}, W. and {Huffenberger}, K.~M. and {Hurier}, G. and {Jaffe}, A.~H. and {Jaffe}, T.~R. and {Jones}, W.~C. and {Juvela}, M. and {Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kisner}, T.~S. and {Kneissl}, R. and {Knoche}, J. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lagache}, G. and {L{\"a}hteenm{\"a}ki}, A. and {Lamarre}, J. -M. and {Lasenby}, A. and {Lattanzi}, M. and {Lawrence}, C.~R. and {Leahy}, J.~P. and {Leonardi}, R. and {Lesgourgues}, J. and {Levrier}, F. and {Liguori}, M. and {Lilje}, P.~B. and {Linden-V{\o}rnle}, M. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and {Maggio}, G. and {Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and {Maris}, M. and {Marshall}, D.~J. and {Martin}, P.~G. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and {Masi}, S. and {Matarrese}, S. and {McGehee}, P. and {Meinhold}, P.~R. and {Melchiorri}, A. and {Mendes}, L. and {Mennella}, A. and {Migliaccio}, M. and {Mitra}, S. and {Miville-Desch{\^e}nes}, M. -A. and {Moneti}, A. and {Montier}, L. and {Morgante}, G. and {Mortlock}, D. and {Moss}, A. and {Munshi}, D. and {Murphy}, J.~A. and {Nati}, F. and {Natoli}, P. and {Netterfield}, C.~B. and {N{\o}rgaard-Nielsen}, H.~U. and {Noviello}, F. and {Novikov}, D. and {Novikov}, I. and {Orlando}, E. and {Oxborrow}, C.~A. and {Paci}, F. and {Pagano}, L. and {Pajot}, F. and {Paladini}, R. and {Paoletti}, D. and {Partridge}, B. and {Pasian}, F. and {Patanchon}, G. and {Pearson}, T.~J. and {Peel}, M. and {Perdereau}, O. and {Perotto}, L. and {Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and {Piat}, M. and {Pierpaoli}, E. and {Pietrobon}, D. and {Plaszczynski}, S. and {Pointecouteau}, E. and {Polenta}, G. and {Pratt}, G.~W. and {Pr{\'e}zeau}, G. and {Prunet}, S. and {Puget}, J. -L. and {Rachen}, J.~P. and {Reach}, W.~T. and {Rebolo}, R. and {Reinecke}, M. and {Remazeilles}, M. and {Renault}, C. and {Renzi}, A. and {Ristorcelli}, I. and {Rocha}, G. and {Rosset}, C. and {Rossetti}, M. and {Roudier}, G. and {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Rusholme}, B. and {Sandri}, M. and {Santos}, D. and {Savelainen}, M. and {Savini}, G. and {Scott}, D. and {Seiffert}, M.~D. and {Shellard}, E.~P.~S. and {Spencer}, L.~D. and {Stolyarov}, V. and {Stompor}, R. and {Strong}, A.~W. and {Sudiwala}, R. and {Sunyaev}, R. and {Sutton}, D. and {Suur-Uski}, A. -S. and {Sygnet}, J. -F. and {Tauber}, J.~A. and {Terenzi}, L. and {Toffolatti}, L. and {Tomasi}, M. and {Tristram}, M. and {Tucci}, M. and {Tuovinen}, J. and {Umana}, G. and {Valenziano}, L. and {Valiviita}, J. and {Van Tent}, F. and {Vidal}, M. and {Vielva}, P. and {Villa}, F. and {Wade}, L.~A. and {Wandelt}, B.~D. and {Watson}, R. and {Wehus}, I.~K. and {Wilkinson}, A. and {Yvon}, D. and {Zacchei}, A. and {Zonca}, A.},
+        title = "{Planck 2015 results. XXV. Diffuse low-frequency Galactic foregrounds}",
+      journal = {\aap},
+     keywords = {diffuse radiation, ISM: general, radiation mechanisms: general, radio continuum: ISM, polarization, local insterstellar matter, Astrophysics - Astrophysics of Galaxies},
+         year = 2016,
+        month = sep,
+       volume = {594},
+          eid = {A25},
+        pages = {A25},
+          doi = {10.1051/0004-6361/201526803},
+archivePrefix = {arXiv},
+       eprint = {1506.06660},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...594A..25P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+%% Planck_2016
+@ARTICLE{Planck_X,
+       author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and {Alves}, M.~I.~R. and {Arnaud}, M. and {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and {Banday}, A.~J. and {Barreiro}, R.~B. and {Bartlett}, J.~G. and {Bartolo}, N. and {Battaner}, E. and {Benabed}, K. and {Beno{\^\i}t}, A. and {Benoit-L{\'e}vy}, A. and {Bernard}, J. -P. and {Bersanelli}, M. and {Bielewicz}, P. and {Bock}, J.~J. and {Bonaldi}, A. and {Bonavera}, L. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and {Boulanger}, F. and {Bucher}, M. and {Burigana}, C. and {Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and {Catalano}, A. and {Challinor}, A. and {Chamballu}, A. and {Chary}, R. -R. and {Chiang}, H.~C. and {Christensen}, P.~R. and {Colombi}, S. and {Colombo}, L.~P.~L. and {Combet}, C. and {Couchot}, F. and {Coulais}, A. and {Crill}, B.~P. and {Curto}, A. and {Cuttaia}, F. and {Danese}, L. and {Davies}, R.~D. and {Davis}, R.~J. and {de Bernardis}, P. and {de Rosa}, A. and {de Zotti}, G. and {Delabrouille}, J. and {Delouis}, J. -M. and {D{\'e}sert}, F. -X. and {Dickinson}, C. and {Diego}, J.~M. and {Dole}, H. and {Donzelli}, S. and {Dor{\'e}}, O. and {Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and {Eriksen}, H.~K. and {Falgarone}, E. and {Fergusson}, J. and {Finelli}, F. and {Forni}, O. and {Frailis}, M. and {Fraisse}, A.~A. and {Franceschi}, E. and {Frejsel}, A. and {Galeotta}, S. and {Galli}, S. and {Ganga}, K. and {Ghosh}, T. and {Giard}, M. and {Giraud-H{\'e}raud}, Y. and {Gjerl{\o}w}, E. and {Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and {Gratton}, S. and {Gregorio}, A. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and {Hansen}, F.~K. and {Hanson}, D. and {Harrison}, D.~L. and {Helou}, G. and {Henrot-Versill{\'e}}, S. and {Hern{\'a}ndez-Monteagudo}, C. and {Herranz}, D. and {Hildebrandt}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and {Hornstrup}, A. and {Hovest}, W. and {Huffenberger}, K.~M. and {Hurier}, G. and {Jaffe}, A.~H. and {Jaffe}, T.~R. and {Jones}, W.~C. and {Juvela}, M. and {Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kisner}, T.~S. and {Kneissl}, R. and {Knoche}, J. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lagache}, G. and {L{\"a}hteenm{\"a}ki}, A. and {Lamarre}, J. -M. and {Lasenby}, A. and {Lattanzi}, M. and {Lawrence}, C.~R. and {Leahy}, J.~P. and {Leonardi}, R. and {Lesgourgues}, J. and {Levrier}, F. and {Liguori}, M. and {Lilje}, P.~B. and {Linden-V{\o}rnle}, M. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and {Maggio}, G. and {Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and {Maris}, M. and {Marshall}, D.~J. and {Martin}, P.~G. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and {Masi}, S. and {Matarrese}, S. and {McGehee}, P. and {Meinhold}, P.~R. and {Melchiorri}, A. and {Mendes}, L. and {Mennella}, A. and {Migliaccio}, M. and {Mitra}, S. and {Miville-Desch{\^e}nes}, M. -A. and {Moneti}, A. and {Montier}, L. and {Morgante}, G. and {Mortlock}, D. and {Moss}, A. and {Munshi}, D. and {Murphy}, J.~A. and {Nati}, F. and {Natoli}, P. and {Netterfield}, C.~B. and {N{\o}rgaard-Nielsen}, H.~U. and {Noviello}, F. and {Novikov}, D. and {Novikov}, I. and {Orlando}, E. and {Oxborrow}, C.~A. and {Paci}, F. and {Pagano}, L. and {Pajot}, F. and {Paladini}, R. and {Paoletti}, D. and {Partridge}, B. and {Pasian}, F. and {Patanchon}, G. and {Pearson}, T.~J. and {Peel}, M. and {Perdereau}, O. and {Perotto}, L. and {Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and {Piat}, M. and {Pierpaoli}, E. and {Pietrobon}, D. and {Plaszczynski}, S. and {Pointecouteau}, E. and {Polenta}, G. and {Pratt}, G.~W. and {Pr{\'e}zeau}, G. and {Prunet}, S. and {Puget}, J. -L. and {Rachen}, J.~P. and {Reach}, W.~T. and {Rebolo}, R. and {Reinecke}, M. and {Remazeilles}, M. and {Renault}, C. and {Renzi}, A. and {Ristorcelli}, I. and {Rocha}, G. and {Rosset}, C. and {Rossetti}, M. and {Roudier}, G. and {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Rusholme}, B. and {Sandri}, M. and {Santos}, D. and {Savelainen}, M. and {Savini}, G. and {Scott}, D. and {Seiffert}, M.~D. and {Shellard}, E.~P.~S. and {Spencer}, L.~D. and {Stolyarov}, V. and {Stompor}, R. and {Strong}, A.~W. and {Sudiwala}, R. and {Sunyaev}, R. and {Sutton}, D. and {Suur-Uski}, A. -S. and {Sygnet}, J. -F. and {Tauber}, J.~A. and {Terenzi}, L. and {Toffolatti}, L. and {Tomasi}, M. and {Tristram}, M. and {Tucci}, M. and {Tuovinen}, J. and {Umana}, G. and {Valenziano}, L. and {Valiviita}, J. and {Van Tent}, F. and {Vidal}, M. and {Vielva}, P. and {Villa}, F. and {Wade}, L.~A. and {Wandelt}, B.~D. and {Watson}, R. and {Wehus}, I.~K. and {Wilkinson}, A. and {Yvon}, D. and {Zacchei}, A. and {Zonca}, A.},
+        title = "{Planck 2015 results. XXV. Diffuse low-frequency Galactic foregrounds}",
+      journal = {\aap},
+     keywords = {diffuse radiation, ISM: general, radiation mechanisms: general, radio continuum: ISM, polarization, local insterstellar matter, Astrophysics - Astrophysics of Galaxies},
+         year = 2016,
+        month = sep,
+       volume = {594},
+          eid = {A25},
+        pages = {A25},
+          doi = {10.1051/0004-6361/201526803},
+archivePrefix = {arXiv},
+       eprint = {1506.06660},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...594A..25P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 
